@@ -60,6 +60,6 @@ def doLocalCommit(db, changeSetFile):
     if not cs.isLocal():
 	log.error("repository changesets must be applied with update instead")
     else:
-        db.commitChangeSet(cs, set(), isRollback = True, toStash = False)
+        db.commitChangeSet(cs, set(), isRollback = True, updateDatabase = False)
 
 
